Fix menu side bar cutting off at 100% height

--- a/src/ui/number-trainer/NumberTrainer.css
+++ b/src/ui/number-trainer/NumberTrainer.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: var(--content-min-height);
 
     > div {
         width: 100%;
